<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
 >



    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:requiresFadingEdge="horizontal|vertical"
        android:fadeScrollbars="false"
        android:id="@+id/horizontallayoutholder"
        android:orientation="horizontal"
        ads:stackFromEnd="true"
        ads:reverseLayout="true"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/horizontallayoutholder"

        android:layout_height="match_parent"

       >


        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingBottom="58dp"
            android:layout_height="match_parent"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_color" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mars_live_chat_view"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
  />
            <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:id="@+id/liveprogress"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="top|center"
            android:paddingBottom="65dp">

            <Button
                android:id="@+id/jump_totop"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/shape_jump_to_bottom"
                android:text="@string/check_more"
                android:textAllCaps="false"
                android:textColor="#FFF" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:paddingBottom="58dp">

            <Button
                android:id="@+id/jump_bottom"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/shape_jump_to_bottom"
                android:text="@string/jump_to_latest"
                android:textAllCaps="false"
                android:textColor="#FFF" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="3"

            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2.55"
                android:layout_height="wrap_content">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="3dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    >

                    <ImageView
                        android:id="@+id/emoticon"
                        android:layout_width="24dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_height="24dp"
                        android:layout_gravity="bottom"

                        />

                    <github.ankushsachdeva.emojicon.EmojiconEditText
                        android:id="@+id/messageEditText"
                        android:layout_width="190dp"

                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:maxLines="4"
                        android:layout_toEndOf="@+id/emoticon"
                        android:layout_toRightOf="@+id/emoticon"


                        android:hint="@string/hint_write_message"
                        android:maxWidth="210dp"
                        android:textColorHint="#AEC3E3"
                        ads:emojiconSize="28sp" />
                    <ImageButton
                        android:id="@+id/attachment"
                        android:layout_width="24dp"
                        android:layout_marginRight="5dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_height="24dp"

                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="12dp"
                        android:layout_gravity="bottom"
                       android:background="@drawable/ic_attach"
                        />






                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"


                android:layout_marginLeft="4dp"
                android:layout_weight=".45"
                android:gravity="center"
                android:layout_gravity="center"

                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="47.5dp"

                    android:id="@+id/sendbackground"
                    android:background="@drawable/circular_shape"
                    android:layout_height="47.5dp">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/send_button"
                        android:paddingLeft="5dp"
                        android:layout_gravity="center"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_send"
                        />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>




    </android.support.design.widget.CoordinatorLayout>





</RelativeLayout>
